--- a/libOkHttp/build.gradle
+++ b/libOkHttp/build.gradle
@@ -5,21 +5,27 @@ apply plugin: 'com.github.dcendents.android-maven'
 group = 'com.github.rhinoSp'//com.github.<用户名>(也就是你GtiHub上的地址)
 
 android {
-    compileSdkVersion rootProject.android.compileSdkVersion
-
+    compileSdkVersion pkgCompileSdkVersion
     defaultConfig {
-        minSdkVersion rootProject.android.minSdkVersion
-        targetSdkVersion rootProject.android.targetSdkVersion
+        minSdkVersion pkgMinSdkVersion
+        targetSdkVersion pkgTargetSdkVersion
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation rootProject.ext.dependencies["appcompat-v7"]
-    implementation rootProject.ext.dependencies["lib_okhttp"]
-    implementation 'com.github.rhinoSp:LibLog:v1.9.3'
+    implementation rootProject.ext.appcompat
+    implementation rootProject.ext.material
+    implementation rootProject.ext.constraintlayout
+    implementation rootProject.ext.okhttp3_okhttp
+    implementation rootProject.ext.gson
+
+    implementation rootProject.ext.rhinoLog
 }
